--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "sweetalert2": "^11.6.2",
     "use-sound": "^4.0.1",
     "web-vitals": "^2.1.4",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "yup-password": "^0.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
