--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.6",
     "react-toastify": "^9.0.8",
     "sweetalert2": "^11.6.2",
     "use-sound": "^4.0.1",
